--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^0.17.1",
     "d3": "^4.12.2",
+    "d3-xyzoom": "^1.5.0",
     "finalhandler": "^1.1.0",
+    "jquery": "^3.2.1",
     "serve-static": "^1.13.1"
   },
   "devDependencies": {
