--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3-xyzoom": "^1.5.0",
     "finalhandler": "^1.1.0",
     "jquery": "^3.2.1",
+    "mout": "^1.1.0",
     "serve-static": "^1.13.1"
   },
   "devDependencies": {
