--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
-    "d3": "^4.12.2",
+    "d3": "^5.5.0",
     "d3-xyzoom": "^1.5.0",
-    "finalhandler": "^1.1.0",
-    "jquery": "^3.2.1",
+    "finalhandler": "^1.1.1",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "mout": "^1.1.0",
-    "serve-static": "^1.13.1"
+    "serve-static": "^1.13.2",
+    "stable": "^0.1.8",
+    "stardust-core": "^0.1.1",
+    "stardust-webgl": "^0.1.1"
   },
   "devDependencies": {
-    "watchify": "^3.9.0",
-    "eslint": "^4.11.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.13.0",
+    "watchify": "^3.11.0"
   }
 }
