--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "mout": "^1.1.0",
+    "science": "^1.9.3",
     "serve-static": "^1.13.2",
     "stable": "^0.1.8",
     "stardust-core": "^0.1.1",
